# python-discid

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  Makefile  README.rst  examples.py  pyproject.toml  test_discid.py
.github/workflows/: build.yaml  lint.yaml  test.yaml
discid/: __init__.py  disc.py  libdiscid.py  track.py  util.py
doc/: conf.py  install.rst  requirements.txt
