[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "discid"
version = "1.2.0"
description = "Python binding of Libdiscid"
authors = [
  {name = "Johannes Dewender", email = "brainz@JonnyJD.net"},
]
requires-python = ">=3.9"
readme = "README.rst"
license = "LGPL-3.0-or-later"
license-files = ["COPYING.LESSER"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://python-discid.readthedocs.org/"
Repository = "https://github.com/JonnyJD/python-discid"
Issues = "https://github.com/JonnyJD/python-discid/issues"
Changelog = "https://github.com/JonnyJD/python-discid/blob/master/CHANGES.rst"
