[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "discid"
version = "1.3.0"
description = "Python binding of Libdiscid"
authors = [
  {name = "Johannes Dewender", email = "brainz@JonnyJD.net"},
  {name = "Philipp Wolfer", email = "ph.wolfer@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.rst"
license = "LGPL-3.0-or-later"
license-files = ["COPYING.LESSER"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://python-discid.readthedocs.org/"
Repository = "https://github.com/metabrainz/python-discid"
Issues = "https://github.com/metabrainz/python-discid/issues"
Changelog = "https://github.com/metabrainz/python-discid/blob/master/CHANGES.rst"

[dependency-groups]
test = ["pytest"]
docs = [
  "Sphinx>=8.1.3",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-rtd-theme>=3.0.2",
]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]

[tool.ruff]
src=["discid"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP"]
